# touchme

./: Cargo.toml  README.md  build.rs
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: main.ts  routes.ts
frontend/src/assets/: base.css  main.css
frontend/src/components/: Control.vue  Qr.vue
frontend/src/components/Control/: Buttons.vue  DirectionalButton.vue  Touchpad.vue
frontend/src/utils/: ws.ts
src/: local_ip.rs  main.rs  server.rs  state.rs  static_dir.rs  touch.rs  tray.rs
src/components/: local_ip.rs  mod.rs  touch.rs
src/routes/: ws.rs
