[package]
name = "touchme"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
enigo = "0.3.0"
image = "0.25.5"
include_dir = "0.7.4"
local-ip-address = "0.6.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tao = "0.31.1"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tray-icon = "0.19.2"
webbrowser = "1.0.3"

[build-dependencies]
winres = "0.1.12"
